fixed z-index issues

--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -7,14 +7,12 @@ header{box-shadow: var(--lightShadow);padding: 20px 0;}
 
 .header-links-wrap{position: relative;display: flex;align-items: center;}
 .user-icon-btn{margin-left: 20px;}
-#dropdown-links{position: absolute;top: 120%;right: 0;background: var(--white);box-shadow: var(--lightShadow);padding: 20px;border-radius: 10px;width: 200px;text-align: right;}
+#dropdown-links{position: absolute;top: 120%;right: 0;background: var(--white);box-shadow: var(--lightShadow);padding: 20px;border-radius: 10px;width: 200px;text-align: right;z-index: 2;}
 #dropdown-links li{margin-bottom: 15px;}
 #dropdown-links li:last-child{margin-bottom: 0;}
-
-
 
 @media only screen and (max-width:767px){
     header{position: relative;}
     .search-icon-btn{margin-left: auto;}
-    #search-bar-wrap{position: absolute;top: 120%;left: 15px;right: 15px;width: auto;}
+    #search-bar-wrap{position: absolute;top: 120%;left: 15px;right: 15px;width: auto;z-index: 3;background: #fff;;}
 }
